@@ -97,6 +97,11 @@ Bug Fixes
   ArrayIndexOutOfBoundsException when byte blocks larger than 32 KB
   were added (Mike McCandless)
 
+Improvements
+
+* LUCENE-7782: OfflineSorter now passes the total number of items it
+  will write to getWriter (Mike McCandless)
+
 Other
 
 * LUCENE-7754: Inner classes should be static whenever possible.
